--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
     "node-quickbooks": "^2.0.11"
   }
