--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.6.1",
+    "angular-ui-router": "^0.3.2",
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
     "node-quickbooks": "^2.0.11"
   }
 }
