--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "angular": "^1.6.1",
     "angular-ui-router": "^0.3.2",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
     "jquery": "^3.1.1",
-    "node-quickbooks": "^2.0.11"
+    "jsonwebtoken": "^7.2.1",
+    "mongoose": "^4.7.6",
+    "morgan": "^1.7.0",
+    "node-quickbooks": "^2.0.11",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
